# PROJECT-lota

./: .cspell.json  .cursorignore  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Phi_4_Conversational.ipynb  README.md  SECURITY.md  TROUBLESHOOTING.md  agent-log.md  api-design.yaml  client_configuration_token_12-22-2024-21-18-55.tok  compose.yaml  configuration-schema.yaml  container_images.txt  cs-hc-cd812496a16440caaa406d73-e61fd97e4b34.json  cypress.config.js  deployment_template.yaml  dev-token.sh  docker-compose.yaml  docker-compose.yml  file_list.txt  genai_instrumentation.py  layout.tsx  load-test.sh  method_lotabots.tex  middleware.ts  next.config.js  ngc-cli.md5  nv.code-workspace  package-lock.json  package.json  (+17 more)
ai-services/attestation/: Cargo.toml
ai-services/attestation/src/: lib.rs
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: error.rs  logging.rs  validation.rs  worker.rs  worker_pool.rs
api-gateway/src/routes/: api.rs
api-gateway/src/tests/: scenarios.rs
attestation/: Cargo.toml
attestation/src/core/: container.rs  mod.rs
attestation/src/tests/: gpu_tests.rs  mod.rs
common/: Cargo.toml
common/auth/: jwt.rs  mod.rs
common/benches/: stree_benchmark.rs
common/config/: Cargo.toml
common/config/src/: lib.rs
common/middleware/: auth.rs  security.rs  validator.rs
common/secrets/: Cargo.toml
common/secrets/src/: lib.rs
common/src/: auth.rs  error.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  stree.rs  validation.rs
common/types/: jsx.d.ts
services/agent-orchestration/: Cargo.toml  docker-compose.yml
services/agent-orchestration/config/: default.toml
services/agent-orchestration/src/: main.rs
services/ai-attestation/: Cargo.toml  README.md
services/ai-attestation/src/: lib.rs
services/api-gateway/: Cargo.toml  Dockerfile  README.md
services/api-gateway/migrations/: 20240101000000_initial.sql
services/api-gateway/scripts/: monitoring.sh
services/api-gateway/src/: config.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  secrets.rs  usage_tracking.rs
services/api_gateway/: .env.example  Cargo.toml
services/api_gateway/.sqlx/: query-3819e42a5a8310a93f0e483d66607fb01316b9c95fad2480eb45866da4e66373.json  query-5cc2edebd4716fef48e548ef7b4b43d6de5f22070c86e2701a72448d0e62137e.json  query-84ce6295de3d1871ebbf1200271bcb8dfe197ae1261cb3b972b592b2711addca.json  query-84d8c51901773fd498747438c6f4625be6974d87b160815082a4774961e0b46f.json  query-8591b1041ba16ba183b19f4aabc5c8ce7fb852a6ff1766fabf5670629b2e6e8b.json  query-9b1fcdfdbaa1e8c219a8f257017f42d8c61438aac76b6d1364614e058f8d73e9.json  query-a422e815e280c70a52f633736a9bdb95009d3389dbc3442bc76c307235a6ebee.json  query-c9508efe2f1d62f3bd0c5b573f06930b3216c0d0459026661cb11b78b79d9614.json  query-efe4b8e8ee83d2c87fb95c8a87d1c870839a719c86ba7c65f5eb1fa7428f3dd5.json  query-f034d720f3d96326b77a05a4db56965cadaa9eaabea1aec5a18e94e8ce626d67.json  query-f6b6d0870811ade7771ebd2a7d7407e19f1eb24c178c86f765cc72cf2f2877a4.json
services/api_gateway/migrations/: 20250114140753_initial_schema.down.sql  20250114140753_initial_schema.sql
services/api_gateway/src/: db.rs  error.rs  lib.rs  main.rs  models.rs
services/api_gateway/tests/: auth.rs
services/auth/fuzz/: Cargo.toml
services/document-automation/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
services/document-automation/config/: default.toml
services/document-automation/docs/: README.md
services/document-automation/migrations/: 20240104000000_initial_schema.down.sql  20240104000000_initial_schema.sql  20240105_init.sql
services/document-automation/scripts/: db-manage.sh  dev-token.sh  run-migrations.sh  setup-dev.sh  test-all.sh
services/document-automation/src/: error.rs  main.rs
services/hardware-attestation/: Cargo.toml  README.md  build.rs
services/hardware-attestation/benches/: bench_utils.rs  gpu_allocations.rs  gpu_benchmarks.rs  mod.rs  system_monitor.rs  visualization.rs
services/hardware-attestation/migrations/: 20240103_initial.sql
services/hardware-attestation/src/: error.rs  lib.rs  main.rs
services/resource-management/: Cargo.toml
services/resource-management/src/: lib.rs
services/user-management/: Cargo.toml  docker-compose.yml
services/user-management/config/: base.yaml  development.yaml
services/user-management/k8s/: deployment.yml  monitoring.yml
services/user-management/migrations/: 20240101000001_create_tenant_tables.sql  20240102000000_initial_schema.sql
services/user-management/src/: Cargo.toml  config.rs  error.rs  main.py  main.rs
shared/db/: Cargo.toml
shared/db/src/: lib.rs
shared/testing/: Cargo.toml
shared/testing/src/: lib.rs
shared/utils/: Cargo.toml
shared/utils/src/: lib.rs
shared/verifier/: Cargo.toml
shared/verifier/src/: lib.rs
src/api_gateway/: Cargo.toml  Dockerfile  docker-compose.yml  errors.rs  lib.rs  main.rs  prometheus.yml  state.rs
src/api_gateway/config/: default.toml
src/api_gateway/handlers/: ai.rs  health.rs
src/api_gateway/middleware/: security.rs  ssl.rs
src/api_gateway/migrations/: 20240101000000_initial.sql  20240101000002_initial.sql  20240101000003_create_users.sql
src/api_gateway/monitoring/: metrics.rs
src/api_gateway/repositories/: user.rs
src/api_gateway/services/: auth.rs  user.rs
src/api_gateway/src/: config.rs  error.rs  main.rs  metrics.rs  routes.rs  state.rs  tenant.rs  validation.rs
src/api_gateway/utils/: localization.rs
src/attestation/: Cargo.toml  Dockerfile  main.rs
src/attestation/src/: config.rs  (+4 more)
src/user_management/: Cargo.toml  Dockerfile  README.md  main.rs  models.rs
user-management/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
user-management/k8s/: alerting.yml
user-management/migrations/: 20240101000001_create_tenant_tables.down.sql
user-management/src/: config.rs  db.rs  error.rs  events.rs  main.rs  models.rs
user-management/tests/: integration_tests.rs  middleware_tests.rs  tenant_tests.rs
(+878 files in other folders)
