[package]
name = "document-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-service = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
redis = { version = "0.24", features = ["tokio-comp"] }
lazy_static = "1.4"
futures = "0.3"
futures-util = "0.3"
parking_lot = "0.12"
base32 = "0.4"
hmac = "0.12"
sha1 = "0.10"
actix-http = "3.9"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
actix-rt = "2.9"
assert_matches = "1.5"
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"
