[package]
name = "lotaai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lotaai"
path = "src/main.rs"

[[bin]]
name = "db_check"
path = "src/bin/db_check.rs"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde_json = "1.0.113"
sha1 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "uuid",
    "chrono",
    "json",
] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Monitoring and observability
opentelemetry = { version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-gcp = "0.15"
prometheus = "0.13"
opentelemetry-prometheus = "0.14"

[dev-dependencies]
tokio-test = "0.4"
