[workspace]
members = [
    "services/api_gateway",
    "shared"
]

[workspace.dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "9.2"
config = "0.13"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
