[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "node_modules", ".git", "__pycache__"]

# Specify tests to skip
skips = ["B101", "B104"] # Example: Skip assert statements and hardcoded bind

# Configure test settings
[tool.bandit.settings]
confidence_level = "HIGH"
severity_level = "MEDIUM"

# Configure specific test settings
[tool.bandit.settings.B108] # Hardcoded temp file paths
check_for_common_prefixes = true

[tool.bandit.settings.B301] # pickle
import_aliases = ["pickle", "cPickle", "_pickle"]

[tool.bandit.settings.B506] # yaml load
safe_load_function_name = "safe_load"

# Configure output format
[tool.bandit.output]
format = "json"
output_file = "bandit-report.json"
show_progress = true

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lota-ai"
version = "2.0.0"
description = "LOTA AI Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "python-jose>=3.4.0",
    "python-multipart>=0.0.18",
    "sqlx>=0.1.1",
    "torch>=2.2.0",
    "nltk>=3.9",
    "transformers>=4.38.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.16.0",
    "Flask>=3.1.0",
    "Werkzeug>=3.1.3",
    "tritonclient[http]>=2.53.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
]
