[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["LotaBots Team"]
description = "API Gateway for the LotaBots platform"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
actix-service = "2.0"
futures = "0.3"

# Error handling and validation
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration and environment
config = "0.13"
dotenv = "0.15"
envy = "0.4"

# System monitoring
sys-info = "0.9"
num_cpus = "1.16"

# GPU monitoring (optional)
nvml-wrapper = { version = "0.9", optional = true }

[features]
default = ["gpu"]
gpu = ["nvml-wrapper"]

[dev-dependencies]
tokio-test = "0.4"
actix-rt = "2.9"
mockall = "0.12"
wiremock = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
debug = true  # Keep debug symbols for better error reporting
opt-level = 3 