[package]
name = "attestation"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0.56"
aws-sdk-s3 = "0.34"
chrono = { version = "0.4", features = ["serde"] }
google-cloud-storage = "0.12"
log = "0.4"
nvml-wrapper = "0.9"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
test-log = "0.2"
wiremock = "0.5"
tempfile = "3.8"
rand = "0.8"
futures = "0.3"
