[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
opentelemetry = "0.20"
opentelemetry-otlp = "0.13"
tracing-opentelemetry = "0.21"
idna = "1.0"

# Local dependencies
actix-web = "4.4"
actix-service = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "stree_benchmark"
harness = false
