[package]
name = "user-management"
version = "0.1.0"
edition = "2021"
authors = ["LotaBots Team"]
description = "User Management Service for the LotaBots platform"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-service = "2.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# UUID handling
uuid = { version = "1.6", features = ["serde", "v4"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Concurrent data structures
dashmap = "5.5"

# Environment variables
dotenv = "0.15"

# Testing
tokio-test = "0.4"
lazy_static = "1.4"

[dev-dependencies]
actix-rt = "2.9"
mockall = "0.12"
serial_test = "2.0"

[features]
default = []
test-integration = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort" 