[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = "0.4"
config = "0.13"
opentelemetry = { version = "0.20", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { features = ["runtime-tokio-rustls", "postgres"], version = "0.7" }
thiserror = "1.0"
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { features = ["v4"], version = "1.6" }
