[package]
name = "lotabots-secrets"
version = "0.1.0"
edition = "2021"
description = "Common secrets management library for LotaBots services"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
lotabots-config = { path = "../config" } 