[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Local dependencies
common = { path = "../../common" }

# Service-specific dependencies
actix-web = "4.0"
actix-rt = "2.0"
actix-cors = "0.6"
actix-service = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
config = "0.13"
prometheus = "0.13"
redis = { version = "0.23", features = ["tokio-comp"] }
jsonwebtoken = "8.1"
reqwest = { version = "0.11", features = ["json"] }
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
metrics = "0.21"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
