[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
lotabots-config = { path = "../../shared/config" }
env_logger = "0.11"
dotenv = "0.15"
openssl = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
actix-cors = "0.6"
actix-governor = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
zxcvbn = "2"
bigdecimal = { version = "0.3", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.9"
actix-test = "0.1"
test-context = "0.1"
