[package]
name = "document-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
thiserror = "2.0"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
aws-config = "1.5"
aws-sdk-s3 = "1.68"
jsonwebtoken = "9.3"
headers = "0.4"

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "document-automation"
path = "src/main.rs"
