[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Local dependencies
common = { path = "../../common" }

# Service-specific dependencies
actix-web = "4.0"
actix-rt = "2.0"
actix-cors = "0.6"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }
redis = { version = "0.23", features = ["tokio-comp"] }
config = "0.13"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"
