[package]
name = "lotabots-testing"
version = "0.1.0"
edition = "2021"
description = "Shared testing utilities for LotaBots"

[dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
testcontainers = "0.14"
fake = { version = "2.6", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
