[package]
name = "lotabots-utils"
version = "0.1.0"
edition = "2021"
description = "Shared utilities for LotaBots"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19"
anyhow = "1.0"
thiserror = "1.0"
