[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
dashmap = "5.5.3"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
jsonschema = "0.17.1"
jsonwebtoken = "9.1.1"
lazy_static = "1.4.0"
log = "0.4.20"
lru = "0.12.1"
prometheus = { version = "0.13.3", features = ["process"] }
redis = { version = "0.23.3", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sys_info = "0.9.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
vaultrs = { version = "0.7.0", features = ["rustls"] }

[dev-dependencies]
actix-rt = "2.9.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
wiremock = "0.5.21"
