[package]
name = "attestation"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
futures = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
base64 = "0.21"
ed25519-dalek = "2.0"
jsonwebtoken = "9.1"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13"
