[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
anyhow = "1.0.75"
argon2 = "0.5.2"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.29"
jsonwebtoken = "9.1.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.9.0"
mockall = "0.12.1"
tokio-test = "0.4.3"
