[package]
name = "lota-user-management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
config = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
num_cpus = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
