[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-service = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
config = "0.13"
futures = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.1"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.20"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13"
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"
